--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       content="black-translucent"
     />
 
-    <title>Front-End Web</title>
+    <title>Harshad Patil | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
