--- a/index.html
+++ b/index.html
@@ -1,64 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Photo.png" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="google-site-verification"
-      content="ZYNfZwMUiNwSMF3EMvY85bid2BVvB12uMMRfUNWw75A"
-    />
-    <meta
-      name="keywords"
-      content="Eki, Eki Zulfar,Eki Zulfar Rachman, siapa Eki, Eki adalah , Siapa Eki Zulfar , ekizr"
-    />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta
-      name="title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
-    <meta
-      name="description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
-    />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://eki.my.id/" />
-    <meta
-      property="og:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
-    <meta
-      property="og:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
-    />
-    <meta property="og:image" content="https://eki.my.id/Meta.png" />
+    
+    <!-- SEO and Social Sharing Meta Tags -->
+    <title>Harshad Patil | Portfolio</title>
+    <meta name="description" content="Personal portfolio of Harshad Patil, showcasing projects, skills, and experience in web development.">
+    
+    <!-- Open Graph / LinkedIn / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://portfolio-harshad.vercel.app/">
+    <meta property="og:title" content="Harshad Patil | Personal Portfolio">
+    <meta property="og:description" content="Explore my journey through projects, certifications, and experience in web development.">
+    <meta property="og:image" content="https://i.imgur.com/your-screenshot-url.png"> <!-- IMPORTANT: Replace with a URL to a screenshot of your site -->
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://eki.my.id/" />
-    <meta
-      property="twitter:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
-    <meta
-      property="twitter:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
-    />
-    <meta property="twitter:image" content="https://eki.my.id/Meta.png" />
-    <meta name="theme-color" content="rgb(3,0,20)" />
-    <meta name="msapplication-navbutton-color" content="rgb(3,0,20)" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://portfolio-harshad.vercel.app/">
+    <meta property="twitter:title" content="Harshad Patil | Personal Portfolio">
+    <meta property="twitter:description" content="Explore my journey through projects, certifications, and experience in web development.">
+    <meta property="twitter:image" content="https://i.imgur.com/your-screenshot-url.png"> <!-- IMPORTANT: Replace with a URL to a screenshot of your site -->
 
-    <title>Harshad Patil | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
