Updated Image in index.html

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://portfolio-harshad.vercel.app/">
     <meta property="og:title" content="Harshad Patil | Personal Portfolio">
     <meta property="og:description" content="Explore my journey through projects, certifications, and experience in web development.">
-    <meta property="og:image" content="https://i.imgur.com/your-screenshot-url.png"> <!-- IMPORTANT: Replace with a URL to a screenshot of your site -->
+    <meta property="og:image" content="https://i.postimg.cc/PJkN3Y3D/Harshad-Portfolio.png"> <!-- IMPORTANT: Replace with a URL to a screenshot of your site -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://portfolio-harshad.vercel.app/">
     <meta property="twitter:title" content="Harshad Patil | Personal Portfolio">
     <meta property="twitter:description" content="Explore my journey through projects, certifications, and experience in web development.">
-    <meta property="twitter:image" content="https://i.imgur.com/your-screenshot-url.png"> <!-- IMPORTANT: Replace with a URL to a screenshot of your site -->
+    <meta property="twitter:image" content="https://i.postimg.cc/PJkN3Y3D/Harshad-Portfolio.png"> <!-- IMPORTANT: Replace with a URL to a screenshot of your site -->
 
   </head>
   <body>
