Updated description in index.html

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     
     <!-- SEO and Social Sharing Meta Tags -->
     <title>Harshad Patil | Portfolio</title>
-    <meta name="description" content="Personal portfolio of Harshad Patil, showcasing projects, skills, and experience in web development.">
+    {/* --- UPDATED, LONGER DESCRIPTION --- */}
+    <meta name="description" content="Welcome to the personal portfolio of Harshad Patil, an Electronics and Telecommunication Engineering student. Explore my journey, projects, and skills in web development.">
     
-    <!-- Open Graph / LinkedIn / Facebook -->
+    {/* --- OPEN GRAPH TAGS WITH UPDATED DESCRIPTION --- */}
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio-harshad.vercel.app/">
+    <meta property="og:url" content="https://portfolio-harshadp.vercel.app/">
     <meta property="og:title" content="Harshad Patil | Personal Portfolio">
-    <meta property="og:description" content="Explore my journey through projects, certifications, and experience in web development.">
-    <meta property="og:image" content="https://i.postimg.cc/PJkN3Y3D/Harshad-Portfolio.png"> <!-- IMPORTANT: Replace with a URL to a screenshot of your site -->
+    <meta property="og:description" content="Welcome to the personal portfolio of Harshad Patil, an Electronics and Telecommunication Engineering student. Explore my journey, projects, and skills in web development.">
+    <meta property="og:image" content="https://i.postimg.cc/PJkN3Y3D/Harshad-Portfolio.pngg">
 
-    <!-- Twitter -->
+    {/* --- TWITTER TAGS WITH UPDATED DESCRIPTION --- */}
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://portfolio-harshad.vercel.app/">
+    <meta property="twitter:url" content="https://portfolio-harshadp.vercel.app/">
     <meta property="twitter:title" content="Harshad Patil | Personal Portfolio">
-    <meta property="twitter:description" content="Explore my journey through projects, certifications, and experience in web development.">
-    <meta property="twitter:image" content="https://i.postimg.cc/PJkN3Y3D/Harshad-Portfolio.png"> <!-- IMPORTANT: Replace with a URL to a screenshot of your site -->
+    <meta property="twitter:description" content="Welcome to the personal portfolio of Harshad Patil, an Electronics and Telecommunication Engineering student. Explore my journey, projects, and skills in web development.">
+    <meta property="twitter:image" content="https://i.postimg.cc/PJkN3Y3D/Harshad-Portfolio.png">
 
   </head>
   <body>
